--- a/render.yaml
+++ b/render.yaml
@@ -2,17 +2,14 @@ services:
   - type: web
     name: wuzziblog
     env: python
-    buildCommand: >
-      pip install -r requirements.txt &&
-      python manage.py collectstatic --noinput &&
-      python manage.py migrate
+    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
     startCommand: "gunicorn WuzziBlogg.wsgi:application"
     envVars:
       - key: SECRET_KEY
-        generateValue: true   # let Render generate securely
+        generateValue: true
       - key: DATABASE_URL
-        # fromDatabase:
-        #   name: wuzziblogg-db
-        #   property: connectionString
+        fromDatabase:
+          name: wuzziblog-db
+          property: connectionString
       - key: DEBUG
         value: "false"
